[package]
name = "apple-app-store-connect-api-token"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Apple - App Store Connect API - Token"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/apple-rs"
homepage = "https://github.com/bk-rs/apple-rs"
documentation = "https://docs.rs/apple-app-store-connect-api-token"
keywords = []
categories = []
readme = "README.md"

[dependencies]
jsonwebtoken = { version = "8", default-features = false, features = ["use_pem"] }
serde = { version = "1", default-features = false, features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
