[package]
name = "apple-search-ads-client-secret-cli"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Apple - Search Ads - Client Secret Cli"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/apple-rs"
homepage = "https://github.com/bk-rs/apple-rs"
documentation = "https://docs.rs/apple-search-ads-client-secret-cli"
keywords = []
categories = []
readme = "README.md"

[[bin]]
name = "apple_search_ads_client_secret_gen"
path = "src/bin/apple_search_ads_client_secret_gen.rs"

[dependencies]
apple-search-ads-client-secret = { version = "^0.2", path = "../" }
